Add upload ota package method
Install packages:
$ npm install --save formidable

refer to :
1. Node.js Upload Files:
   https://www.w3schools.com/nodejs/nodejs_uploadfiles.asp
2. Swagger file upload:
   https://swagger.io/docs/specification/2-0/file-upload/
